--- a/config.ini
+++ b/config.ini
@@ -6,17 +6,21 @@
 ;Progressbarfilled is the filled characters inside of the bar
 ;Progressbarempty is the blank characters of the bar
 ;Image position Can be right or left. Default is left.
-;Screenpos can be left or right. Default is right.
+;Verticalscreenpos can be top, middle, or bottom. Default is middle.
+;Horizontalscreenpos can be left or right. Default is right.
 [Config]
-fontname = Mono Space
-fontsize = 10
-debug = false
-progressbarstartborder = {
-progressbarendborder = }
+fontname = Mono
+fontsize = 12
+debug = true
+progressbarstartborder = [
+progressbarendborder = ]
 progressbarfilled = #
 progressbarempty = -
 imagepos = right
 screenpos = left
+verticalscreenpos = middle
+horizontalscreenpos = right
+
 [Keys]
-clientid = Nice try
-clientsecret = Nope
+clientid = nope
+clientsecret = im not dumb
