--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,5 @@
 ;Configuration for Spotify Overlay.
-; Warning, fontsize over 15 is not recommended as it doesn't look very good.
-; Debug will print some info when a request is completed or when an error occurs. Debug has to be 'true' for it to work.
+;Warning, fontsize over 15 is not recommended as it doesn't look very good.
 ;Progressbarstartborder is the character at the start of the progressbar
 ;Progressbarendborder is the opposite
 ;Progressbarfilled is the filled characters inside of the bar
@@ -8,10 +7,10 @@
 ;Image position Can be right or left. Default is left.
 ;Verticalscreenpos can be top, middle, or bottom. Default is middle.
 ;Horizontalscreenpos can be left or right. Default is right.
+;Title is at the top of the text in the overlay
 [Config]
 fontname = Mono
 fontsize = 12
-debug = true
 progressbarstartborder = [
 progressbarendborder = ]
 progressbarfilled = #
@@ -19,6 +18,7 @@ progressbarempty = -
 imagepos = right
 verticalscreenpos = middle
 horizontalscreenpos = right
+title = Currently Playing:
 
 [Keys]
 clientid = nope
