Update Coding Style and parameters
I also removed progress bar because it was not very aethetic, will probably be added in few commits

--- a/config.ini
+++ b/config.ini
@@ -10,16 +10,20 @@
 ;Title is at the top of the text in the overlay
 [Config]
 fontname = Mono
-fontsize = 12
-progressbarstartborder = [
-progressbarendborder = ]
-progressbarfilled = #
-progressbarempty = -
+
+titlefontsize = 10
+artistfontsize = 8
+timefontsize = 9
+
+backgroundcolor = #1E1C1F
+titlecolor = #FFFFFF
+artistcolor = #B9B9B9
+timecolor = #D2D2D2
+
 imagepos = right
-verticalscreenpos = middle
+verticalscreenpos = bottom
 horizontalscreenpos = right
-title = Currently Playing:
 
 [Keys]
 clientid = nope
-clientsecret = im not dumb
+clientsecret = nope
