--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@
 ;Horizontalscreenpos can be left or right. Default is right.
 ;Title is at the top of the text in the overlay
 [Config]
-fontname = Mono
+fontname = Circular Std Black
 
 titlefontsize = 10
 artistfontsize = 8
@@ -20,7 +20,6 @@ titlecolor = #FFFFFF
 artistcolor = #B9B9B9
 timecolor = #D2D2D2
 
-imagepos = right
 verticalscreenpos = bottom
 horizontalscreenpos = right
 
