Update window, and add vertical and horizontal position choice

--- a/config.ini
+++ b/config.ini
@@ -20,8 +20,10 @@ titlecolor = #FFFFFF
 artistcolor = #B9B9B9
 timecolor = #D2D2D2
 
-verticalscreenpos = bottom
-horizontalscreenpos = right
+;top, middle or bottom
+verticalscreenpos = top
+;left, middle or right
+horizontalscreenpos = left
 
 [Keys]
 clientid = nope
