--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,13 @@
-;Configuration for Spotify Overlay.
-;Warning, fontsize over 15 is not recommended as it doesn't look very good.
-;Progressbarstartborder is the character at the start of the progressbar
-;Progressbarendborder is the opposite
-;Progressbarfilled is the filled characters inside of the bar
-;Progressbarempty is the blank characters of the bar
-;Image position Can be right or left. Default is left.
-;Verticalscreenpos can be top, middle, or bottom. Default is middle.
-;Horizontalscreenpos can be left or right. Default is right.
-;Title is at the top of the text in the overlay
 [Config]
+;define font style, the font might be installed in your system
 fontname = Circular Std Black
 
+;define font sizes
 titlefontsize = 10
 artistfontsize = 8
 timefontsize = 9
 
+;define colors (hex only)
 backgroundcolor = #1E1C1F
 titlecolor = #FFFFFF
 artistcolor = #B9B9B9
@@ -24,6 +17,9 @@ timecolor = #D2D2D2
 verticalscreenpos = top
 ;left, middle or right
 horizontalscreenpos = left
+
+; define the window transparency a value from 0 (invisible) to 1 (fully visible)
+transparency = 0.85
 
 [Keys]
 clientid = nope
